displaying views on templates

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -2,7 +2,7 @@
 {% if latest_blog_posts %}
   <ul>
     {% for post in latest_blog_posts %}
-        <li><a href="{% url 'detail' post.id %}">{{ post.title }}</a></li>
+        <li><a href="{% url 'detail' post.id %}">{{ post.title }}</a> views: {{post.views}}</li>
     {% endfor %}
   </ul>
 {% else %}
